[package]
name = "baby-git-rs"
version = "0.1.0"
authors = ["Edward Shi <ui.zeyu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
chrono = "0.4"
bincode = "1"
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
sha-1 = "0.9"
snap = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
whoami = "1"
